Update: Landing image fix size

--- a/destination/templates/home.html
+++ b/destination/templates/home.html
@@ -6,7 +6,7 @@
 <div class="relative rounded-lg overflow-hidden shadow-lg m-4">
     {% load static %}
     <!-- Main image of landing -->
-    <img src="{% static 'landing_main_image.svg' %}" alt="main_photo" class="h-600 w-full">
+    <img src="{% static 'landing_main_image.svg' %}" alt="main_photo" class="w-full h-64 md:h-80 lg:h-96 object-cover">
     
     <!-- Text container -->
     <div class="absolute inset-0 flex flex-col items-center justify-center text-white text-center bg-black/50">
